<resources>
    <string name="app_name">Eventorias</string>
    <string name="event_list">Event list</string>
    <string name="no_event">No event</string>
    <string name="no_events_found">No events found</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="add_event">Add Event</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="no_date">No date</string>
    <string name="event_creation">Creation of an event</string>
    <string name="navigate_back">Navigate back</string>
    <string name="validate">Validate</string>
    <string name="title">Title</string>
    <string name="title_placeholder">Enter title</string>
    <string name="description">Description</string>
    <string name="description_placeholder">Tap here to enter your description</string>
    <string name="date_placeholder">MM/DD/YYYY</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="time_placeholder">HH : MM</string>
    <string name="address">Address</string>
    <string name="address_placeholder">Enter full address</string>
    <string name="network_error">No internet connection.</string>
    <string name="database_error">Access denied or database error</string>
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="error">Error</string>
    <string name="try_again">Try again</string>
    <string name="error_message">An error has occurred</string>
    <string name="auth_connexion_problem">Connexion problem during authentication</string>
    <string name="no_results_found">No results found</string>
    <string name="user_profile">User profile</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="notifications">Notifications</string>
    <string name="user_not_found">User Not Found</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="not_specified">Not specified</string>
    <string name="sign_out">Sign out</string>
    <string name="category">Category</string>
    <string name="category_placeholder">Select a category</string>
    <string name="no_description">No description</string>
    <string name="no_location">No location</string>
    <string name="no_time">No time</string>
    <string name="title_is_required">Title is required</string>
    <string name="title_must_be_25_characters_or_less">Title must be 25 characters or less</string>
    <string name="description_is_required">Description is required</string>
    <string name="category_is_required">Category is required</string>
    <string name="location_is_required">Location is required</string>
    <string name="date_is_required">Date is required</string>
    <string name="time_is_required">Time is required</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="confirm">Confirm</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="date_soonest_first">Date (Soonest first)</string>
    <string name="date_latest_first">Date (Latest first)</string>
    <string name="category_a_z">Category (A-Z)</string>
    <string name="category_z_a">Category (Z-A)</string>
    <string name="eventorias_messages">Eventorias Messages</string>
    <string name="category_art">Art</string>
    <string name="category_tech">Tech</string>
    <string name="category_charity">Charity</string>
    <string name="category_sport">Sport</string>
    <string name="category_food">Food</string>
    <string name="category_other">Other</string>
    <string name="event_not_found">Event not found</string>
    <string name="auth_error">Error during authentication</string>
    <string name="clear_search">Clear search</string>
    <string name="event_image_preview">Event image preview</string>
    <string name="author_profile_picture">Author profile picture</string>
    <string name="user_profile_picture">User profile picture</string>
</resources>