...
        Spacer(Modifier.weight(1f))
        NavigationBarItem(
            selected = currentRoute == LIST_ROUTE,
            onClick = onEventsClick,
            icon = { Icon(Icons.Default.Event, contentDescription = null) },
            label = { Text(stringResource(R.string.events)) },
            modifier = Modifier.testTag("events button")
        )
        NavigationBarItem(
            selected = currentRoute == PROFILE_ROUTE,
            onClick = onProfileClick,
            icon = { Icon(Icons.Default.Person, contentDescription = null) },
            label = { Text(stringResource(R.string.profile)) },
...
