package parcours.android.eventorias

import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertIsNotDisplayed
import androidx.compose.ui.test.assertIsSelected
import androidx.compose.ui.test.junit4.v2.createComposeRule
import androidx.compose.ui.test.onNodeWithContentDescription
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performTextInput
import io.mockk.every
import io.mockk.mockk
import io.mockk.verify
import kotlinx.coroutines.flow.MutableStateFlow
import org.junit.Rule
import org.junit.Test
import parcours.android.eventorias.domain.model.Event
import parcours.android.eventorias.domain.model.EventWithAuthor
import parcours.android.eventorias.domain.model.User
import parcours.android.eventorias.ui.screen.list.ListScreen
import parcours.android.eventorias.ui.screen.list.ListViewModel
import parcours.android.eventorias.ui.screen.list.SortOption
import parcours.android.eventorias.ui.theme.EventoriasTheme

class EventListInstrumentedTest {

    @get:Rule
    val composeTestRule = createComposeRule()

    @Test
    fun loadedEventsShouldBeDisplayed() {
        val fakeEventsWithAuthor = listOf(
            EventWithAuthor(Event(title = "Art exhibition", eventId = "1"), User(userId = "user123")),
            EventWithAuthor(Event(title = "Tech conference", eventId = "2"), User(userId = "user123"))
        )

        val viewModel = mockk<ListViewModel>(relaxed = true)
        every { viewModel.listScreenState } returns MutableStateFlow(
            ListViewModel.ListScreenState.EventsLoaded(
                fakeEventsWithAuthor
            )
        )
        every { viewModel.searchQuery } returns MutableStateFlow("")

        composeTestRule.setContent {
            EventoriasTheme {
                ListScreen(
                    viewModel = viewModel,
                    onAddClick = {},
                    onProfileClick = {},
                    onEventClick = {},
                )
            }
        }

        composeTestRule.onNodeWithText("Art exhibition").assertIsDisplayed()
        composeTestRule.onNodeWithText("Tech conference").assertIsDisplayed()
        composeTestRule.onNodeWithTag("events button").assertIsSelected()
    }

    @Test
    fun noLoadedEventsShouldDisplayMessage() {

        val viewModel = mockk<ListViewModel>(relaxed = true)
        every { viewModel.listScreenState } returns MutableStateFlow(ListViewModel.ListScreenState.NoEvents)
        every { viewModel.searchQuery } returns MutableStateFlow("")
        every { viewModel.sortOption } returns MutableStateFlow(SortOption.DATE_ASCENDING)

        composeTestRule.setContent {
            EventoriasTheme {
                ListScreen(
                    viewModel = viewModel,
                    onAddClick = {},
                    onProfileClick = {},
                    onEventClick = {},
                )
            }
        }

        composeTestRule.onNodeWithText("No events found").assertIsDisplayed()
    }

    @Test
    fun errorDuringLoadingShouldDisplayErrorScreen() {

        val viewModel = mockk<ListViewModel>(relaxed = true)
        every { viewModel.listScreenState } returns MutableStateFlow(
            ListViewModel.ListScreenState.Error(
                R.string.unknown_error
            )
        )
        every { viewModel.searchQuery } returns MutableStateFlow("")
        every { viewModel.sortOption } returns MutableStateFlow(SortOption.DATE_ASCENDING)

        composeTestRule.setContent {
            EventoriasTheme {
                ListScreen(
                    viewModel = viewModel,
                    onAddClick = {},
                    onProfileClick = {},
                    onEventClick = {},
                )
            }
        }

        composeTestRule.onNodeWithText("An unknown error occurred.").assertIsDisplayed()
    }

    @Test
    fun searchFieldInputShouldTriggerViewModel() {
        val fakeEventsWithAuthor = listOf(
            EventWithAuthor(Event(title = "Art exhibition", eventId = "1"), User(userId = "user123")),
            EventWithAuthor(Event(title = "Tech conference", eventId = "2"), User(userId = "user123"))
        )

        val viewModel = mockk<ListViewModel>(relaxed = true)
        every { viewModel.listScreenState } returns MutableStateFlow(
            ListViewModel.ListScreenState.EventsLoaded(
                fakeEventsWithAuthor
            )
        )
        every { viewModel.searchQuery } returns MutableStateFlow("")
        every { viewModel.sortOption } returns MutableStateFlow(SortOption.DATE_ASCENDING)
        every { viewModel.sortOption } returns MutableStateFlow(SortOption.DATE_ASCENDING)

        composeTestRule.setContent {
            EventoriasTheme {
                ListScreen(
                    viewModel = viewModel,
                    onAddClick = {},
                    onProfileClick = {},
                    onEventClick = {},
                )
            }
        }

        composeTestRule.onNodeWithTag("search field").assertIsNotDisplayed()
        composeTestRule.onNodeWithTag("search button").performClick()
        composeTestRule.onNodeWithTag("search field").performTextInput("conf")

        verify { viewModel.onSearchQueryChange("conf") }
    }

    @Test
    fun sortingMenuShouldTriggerViewModel() {
        val viewModel = mockk<ListViewModel>(relaxed = true)
        val stateFlow = MutableStateFlow(ListViewModel.ListScreenState.EventsLoaded(emptyList()))
        val searchQueryFlow = MutableStateFlow("")
        val sortOptionFlow = MutableStateFlow(SortOption.DATE_ASCENDING)

        every { viewModel.listScreenState } returns stateFlow
        every { viewModel.searchQuery } returns searchQueryFlow
        every { viewModel.sortOption } returns sortOptionFlow
        every { viewModel.sortOptions } returns SortOption.entries

        composeTestRule.setContent {
            EventoriasTheme {
                ListScreen(
                    viewModel = viewModel,
                    onAddClick = {},
                    onProfileClick = {},
                    onEventClick = {},
                )
            }
        }

        composeTestRule.onNodeWithTag("sorting menu").assertIsNotDisplayed()

        composeTestRule.onNodeWithContentDescription("Sort").performClick()
        composeTestRule.onNodeWithText("Date (Latest first)").performClick()
        composeTestRule.onNodeWithTag("sorting menu").assertIsNotDisplayed()
        verify { viewModel.sortEventsBy(SortOption.DATE_DESCENDING) }

        composeTestRule.onNodeWithContentDescription("Sort").performClick()
        composeTestRule.onNodeWithText("Category (A-Z)").performClick()
        composeTestRule.onNodeWithTag("sorting menu").assertIsNotDisplayed()
        verify { viewModel.sortEventsBy(SortOption.CATEGORY_ASCENDING) }

        composeTestRule.onNodeWithContentDescription("Sort").performClick()
        composeTestRule.onNodeWithText("Category (Z-A)").performClick()
        composeTestRule.onNodeWithTag("sorting menu").assertIsNotDisplayed()
        verify { viewModel.sortEventsBy(SortOption.CATEGORY_DESCENDING) }

        composeTestRule.onNodeWithContentDescription("Sort").performClick()
        composeTestRule.onNodeWithText("Date (Soonest first)").performClick()
        composeTestRule.onNodeWithTag("sorting menu").assertIsNotDisplayed()
        verify { viewModel.sortEventsBy(SortOption.DATE_ASCENDING) }
    }
}
